--- a/index.html
+++ b/index.html
@@ -4,47 +4,37 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <title>Typed.js</title>
+     <title>LabHzrd</title>
      <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> 
      <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
      <div class="contenedor">
           <header>
-               <a href="#" class="logo">HomePets</a>
+               <a href="#" class="logo">LabHzrd</a>
                <nav class="menu">
                     <a href="#">Inicio</a>
-                    <a href="#">Nosotros</a>
-                    <a href="#">Contacto</a>
+                    <a href="#">About us</a>
+                    <a href="#">Contact</a>
                </nav>
           </header>
 
           <main>
                <div class="contenedor-img">
-                    <img src="./img/draw.svg" alt="">
+                    <img src="./img/undraw_by_my_car_ttge.svg" alt="">
                </div>
                <div class="contenedor-texto">
-					<!-- Forma #1 -->
-					<h2 class="titulo">Traé a HomePets <br> a tu <span class="typed"></span></h2>
 					
-					<!-- Forma #2 -->
-						<!-- <h2 class="titulo">
-							<span class="typed"></span>
-						</h2> -->
-					<!-- <div class="titulo" id="cadenas-texto">
-						<p>Traé a HomePets <br> a tu <i class="mascota">Perro</i></p>
-						<p>Traé a HomePets <br> a tu <i class="mascota">Gato</i></p>
-						<p>Traé a HomePets <br> a tu <i class="mascota">Pez</i></p>
-					</div> -->
+					<h2 class="titulo">Auto Detailing <br> arrives at <span class="typed"></span></h2>
 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate architecto officia nulla laudantium minus rerum accusamus?</p>
 
-                    <a href="#" class="btn-link activo">Reserva ahora</a>
-                    <a href="#" class="btn-link">Conocenos</a>
+                    <a href="#" class="btn-link activo">Booking</a>
+                    <a href="#" class="btn-link">know us</a>
                </div>
           </main>
      </div>
-
+     
 	 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
      <script src="./js/main.js"></script>
 </body>
