change to hide information no relavant

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                </div>
                <div class="contenedor-texto">
 					
-					<h2 class="titulo">Auto Detailing <br> arrives at <span class="typed"></span></h2>
+					<h2 class="titulo">Find your Dream <br> drive a <span class="typed"></span></h2>
 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate architecto officia nulla laudantium minus rerum accusamus?</p>
 
